# tritonclient-rs

./: .gitignore  Cargo.toml  LICENSE  build.rs
src/: types.rs
src/grpc/: input.rs  macros.rs  mod.rs  output.rs
src/grpc/client/: channel.rs  config.rs  error.rs  mod.rs
src/grpc/proto/: grpc.health.v1.rs  inference.rs
