[package]
name = "tritonclient"
version = "0.1.0"
edition = "2021"
authors = ["Vo Tien Dat <vtdat58@gmail.com>"]

[dependencies]
ndarray = "0.15.6"
prost = "0.13.1"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.12.0", default-features = false, features = ["channel", "codegen", "prost", "zstd", "transport", "gzip", "tls"] }

[build-dependencies]
tonic-build = { version = "0.12.0", features = ["prost"] }
